sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: not found: value lgr
   		while(i + ecart < lgr){
                                  ^AlgCombSort:13: error: not found: value tri
				tri = true;
                                ^